# MBDS-Python-Streamlit-project

./: README.md  group_project.py  pyproject.toml  requirments.txt
